#19835 Fix admin header buttons flicker

--- a/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/main/_actions-bar.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/main/_actions-bar.less
@@ -46,6 +46,10 @@
     @_page-action__indent: 1.3rem;
     float: right;
 
+    &.floating-header {
+        &:extend(.page-actions-buttons all);
+    }
+
     .page-main-actions & {
         &._fixed {
             left: @page-wrapper__indent-left;
